# clarity-loop-frontend-V2

./: .cursorrules  .editorconfig  .gitignore  .swiftformat  .swiftlint.yml  .test-config.json  .windsurfrules  AGENTS.md  AMPLIFY_CONFIGURATION_COMPLETE_SOLUTION.md  AMPLIFY_CONFIGURATION_FIXES.md  AMPLIFY_CONFIGURATION_FIXES_COMPLETE.md  BACKEND_API_REALITY.md  BACKEND_AUDIT_SUMMARY.md  CLARITY_APP_BUILD_PROCESS.md  CLARITY_AWS_AMPLIFY_SETUP.md  CLARITY_CANONICAL_EXECUTION_PLAN.md  CLARITY_CODEBASE_AUDIT.md  CLARITY_COVERAGE_REQUIREMENTS.md  CLARITY_CURRENT_STATUS.md  CLARITY_DESIGN_SYSTEM.md  CLARITY_DI_CONFLICT_RESOLUTION_PLAN.md  CLARITY_FIXES_SUMMARY.md  CLARITY_FRONTEND_MASTER_PLAN.md  CLARITY_IMPLEMENTATION_GUIDE.md  CLARITY_MODULE_IMPORT_GUIDE.md  CLARITY_OFFLINE_SYNC_ARCHITECTURE.md  CLARITY_PROGRESS_TRACKER.md  CLARITY_REFACTOR_PLAN.md  CLARITY_STATE_MANAGEMENT_GUIDE.md  CLARITY_TASKMASTER_IMPLEMENTATION_GUIDE.md  CLARITY_TESTING_STRATEGY.md  CLARITY_VERTICAL_SLICE_TASK_SUMMARY.md  CLAUDE.md  DEPENDENCY_INJECTION_CANONICAL.md  EXECUTION_LOG.md  HOW_BDD_FAILED_US.md  INTEGRATION_PLAN.md  LICENSE  Makefile  Mintfile  (+15 more)
.claude/: config.json
.taskmaster/: config.json  (+1 more)
BACKEND_REFERENCE/clarity-loop-backend/: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  check-deployment.sh  conftest.py  deploy-quick.sh  docker-compose.yml  gunicorn.aws.conf.py  json  mkdocs.yml  openapi-cleaned.json  openapi-cleaned.yaml  openapi.json  package-lock.json  package.json  pyproject.toml  requirements-security-fixes.txt  ruff.toml
BACKEND_REFERENCE/clarity-loop-backend/models/pat/: checksums.json  checksums.txt
BACKEND_REFERENCE/clarity-loop-backend/ops/: analyze-cognito-baseline.sh  analyze-cognito-security.sh  aws-iam-policy.json  aws-waf-rate-limiting.json  aws.sh  clarity-task-role-policy.json  deploy-waf-idempotent.sh  deploy-waf-rate-limiting.sh  deploy.sh  deploy_bulletproof.sh  ecs-task-definition.json  ecs-task-s3-policy.json  efs-models-setup.json  env.sh  iam-least-privilege-policies.json  s3-bucket-security-policies.json  s3-encryption-config.json  s3-health-data-policy.json  s3-lifecycle-policy.json  s3-ml-models-bucket-policy.json  s3-ml-models-policy.json  test-deploy-script.sh  test-iam-permissions.sh  test-waf-final.sh  test-waf-rate-limiting.sh  validate-config.sh  verify-s3-security.sh  waf-logging-config.json
BACKEND_REFERENCE/clarity-loop-backend/research/: README.md
BACKEND_REFERENCE/clarity-loop-backend/research/Pretrained-Actigraphy-Transformer/: README.md
BACKEND_REFERENCE/clarity-loop-backend/research/Pretrained-Actigraphy-Transformer/Baseline Models/: README.md
BACKEND_REFERENCE/clarity-loop-backend/research/Pretrained-Actigraphy-Transformer/Fine-tuning/: README.md
BACKEND_REFERENCE/clarity-loop-backend/scripts/: clarity-models  clean_openapi.py  create_placeholder_models.py  download_models.sh  entrypoint-debug.sh  entrypoint.sh  generate_openapi.py  model_integrity_cli.py  security_hardening_prd.txt  smoke-test-auth-suite.sh  smoke-test-main.sh  startup_validator.py  store-gcp-credentials.sh  test-secrets.py  test_lockout.py  test_rate_limiting.py  test_security_headers.py  validate_openapi.sh
BACKEND_REFERENCE/clarity-loop-backend/src/clarity/: __init__.py  main.py  version.py
BACKEND_REFERENCE/clarity-loop-backend/tests/: __init__.py  base.py  conftest.py  test_startup.py
BACKEND_REFERENCE/clarity-loop-backend/tests/api/: __init__.py  test_health_data_api.py  test_healthkit_upload.py
BACKEND_REFERENCE/clarity-loop-backend/tests/auth/: __init__.py  test_auth_decorators.py  test_aws_auth_provider_comprehensive.py  test_aws_cognito_provider_comprehensive.py  test_lockout_service.py  test_mock_auth_provider_comprehensive.py
BACKEND_REFERENCE/clarity-loop-backend/tests/core/: __init__.py  test_cloud.py  test_container_aws_production.py  test_decorators.py  test_decorators_comprehensive.py  test_decorators_production.py  test_exceptions.py  test_exceptions_comprehensive.py
BACKEND_REFERENCE/clarity-loop-backend/tests/entrypoints/: __init__.py  test_analysis_service.py  test_insight_service_production.py
BACKEND_REFERENCE/clarity-loop-backend/tests/fakes/: __init__.py  storage.py
BACKEND_REFERENCE/clarity-loop-backend/tests/integration/: __init__.py  conftest.py  test_auth_e2e.py  test_auth_integration.py  test_auth_lockout_integration.py  test_e2e_health_data_flow.py  test_health_data_controller.py
BACKEND_REFERENCE/clarity-loop-backend/tests/integrations/: __init__.py  test_apple_watch.py  test_integrations_init.py
BACKEND_REFERENCE/clarity-loop-backend/tests/middleware/: test_auth_middleware.py  test_rate_limiting.py  test_security_headers.py
BACKEND_REFERENCE/clarity-loop-backend/tests/ml/: test_activity_processor.py  test_analysis_pipeline.py  test_analysis_pipeline_comprehensive.py  test_analysis_pipeline_sleep.py  test_gemini_service.py  test_inference_engine.py  test_model_integrity.py  test_nhanes_stats.py  test_pat_optimization.py  test_pat_preprocessing_integration.py  test_pat_service.py  test_pat_service_comprehensive.py  test_pat_service_production.py  test_pat_windowing.py  test_proxy_actigraphy.py  test_sleep_processor.py
BACKEND_REFERENCE/clarity-loop-backend/tests/services/: __init__.py  test_auth_service.py  test_aws_messaging_service.py  test_dynamodb_service.py  test_dynamodb_service_production.py  test_gcp_credentials.py  test_health_data_service.py  test_s3_storage_service.py  test_sqs_messaging_service.py
BACKEND_REFERENCE/clarity-loop-backend/tests/startup/: __init__.py  test_config_schema.py  test_error_catalog.py  test_health_checks.py  test_integration.py  test_orchestrator.py
BACKEND_REFERENCE/clarity-loop-backend/tests/storage/: __init__.py  test_dynamodb_client.py  test_mock_repository_comprehensive.py
BACKEND_REFERENCE/clarity-loop-backend/tests/unit/: __init__.py  test_api_simple_focused.py  test_config_micro_focused.py  test_health_data_entity.py  test_health_data_service.py  test_health_data_service_comprehensive.py  test_middleware_configuration.py  test_middleware_registration.py
(+1511 files in other folders)
