[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarity-loop-backend"
version = "0.1.0"
description = "Async-first HealthKit wellness backend with AI-powered health insights"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Clarity Team", email = "team@clarityloop.com" },
]
keywords = ["health", "ai", "fastapi", "wellness", "backend"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

dependencies = [
    # Core FastAPI and async framework
    "fastapi>=0.115.0,<0.116.0",
    "gunicorn>=23.0.0,<24.0.0",  # Security fix: CVE request smuggling vulnerability
    "uvicorn[standard]>=0.32.0,<0.35.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",

    # AWS SDK
    "boto3>=1.34.0,<2.0.0",
    "botocore>=1.34.0,<2.0.0",
    "boto3-stubs[cognito-idp,dynamodb,s3]>=1.34.0,<2.0.0",
    
    # Google AI APIs
    "google-generativeai>=0.8.3,<1.0.0",
    "google-cloud-aiplatform>=1.60.0,<2.0.0",
    "vertexai>=1.60.0,<2.0.0",
    
    # JWT and authentication
    "PyJWT[crypto]>=2.10.0,<3.0.0",
    "python-jose[cryptography]>=3.4.0,<4.0.0",  # Security fix: algorithm confusion and JWT bomb CVEs
    "cryptography>=44.0.1,<45.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",

    # AI/ML Dependencies (PAT Implementation) - major version constraints
    "torch>=2.7.0,<3.0.0",
    "transformers>=4.52.4,<5.0.0",
    "numpy>=1.26.0,<2.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "matplotlib>=3.9.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "plotly>=5.24.0,<6.0.0",
    "h5py>=3.11.0,<4.0.0",  # Required for PAT model weight loading

    # AI Integration
    "langchain>=0.3.0,<0.4.0",

    # HTTP and networking
    "httpx>=0.27.0,<0.28.0",
    "requests>=2.32.4,<3.0.0",  # Security fix: credential leaking vulnerability
    "aiohttp>=3.10.0,<4.0.0",  # For model management HTTP client/server
    "aiofiles>=24.1.0,<25.0.0",
    "websockets>=13.1,<14.0.0",

    # Database and caching
    "redis[hiredis]>=5.1.0,<6.0.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<2.0.0",

    # Security and validation
    "bcrypt>=4.2.0,<5.0.0",
    "python-multipart>=0.0.18,<1.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "slowapi>=0.1.9,<1.0.0",  # Rate limiting middleware

    # Health data processing
    "pandas>=2.2.0,<3.0.0",
    "scipy>=1.14.0,<2.0.0",
    "pytz>=2024.2,<2025.0",
    "python-dateutil>=2.9.0,<3.0.0",

    # Monitoring and observability
    "prometheus-client>=0.21.0,<1.0.0",
    "structlog>=24.4.0,<25.0.0",
    "rich>=13.9.0,<14.0.0",
    "circuitbreaker>=2.0.0,<3.0.0",
    "sentry-sdk>=2.8.0,<3.0.0",  # Security fix: environment variable exposure vulnerability
    "protobuf>=5.29.5,<6.0.0",  # Security fix: DoS via recursive parsing vulnerability

    # Configuration and environment
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.0,<9.0.0",
    "typer>=0.12.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing framework
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.27.0",  # for TestClient
    "factory-boy>=3.3.0",
    "faker>=30.0.0",

    # Code quality and linting
    "ruff>=0.6.0",
    "black>=24.8.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
    "bandit[toml]>=1.7.0",
    "safety>=3.2.0",
    "vulture>=2.11",
    "interrogate>=1.7.0",

    # Type stubs
    "types-python-dateutil>=2.9.0",
    "types-redis>=4.6.0",
    "types-requests>=2.32.0",
    "boto3-stubs[cognito-idp,dynamodb,s3,sqs]>=1.34.0",

    # Development tools
    "ipython>=8.28.0",
    "jupyter>=1.1.0",
    "notebook>=7.2.0",
    "pre-commit>=4.0.0",

    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.26.0",

    # Performance profiling
    "py-spy>=0.3.0",
    "memory-profiler>=0.61.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "mkdocstrings[python]>=0.26.0",
]

test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
]

[project.scripts]
clarity-server = "clarity.main:main"
clarity-cli = "clarity.cli:main"
clarity-models = "clarity.ml.models.cli:main"

[project.urls]
Homepage = "https://github.com/clarity-loop/clarity-loop-backend"
Documentation = "https://docs.clarityloop.com"
Repository = "https://github.com/clarity-loop/clarity-loop-backend.git"
Issues = "https://github.com/clarity-loop/clarity-loop-backend/issues"

# Hatchling configuration
[tool.hatch.version]
path = "src/clarity/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clarity"]

[tool.hatch.build]
include = [
    "src/clarity/**/*.py",
    "src/clarity/**/*.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/scripts",
    "/config",
]

# Ruff configuration (replaces flake8, isort, and more)
[tool.ruff]
target-version = "py311"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # unused-function-args
    "SIM", # flake8-simplify
    # "TCH", # flake8-type-checking - disabled since we use __future__ annotations
    "TID", # flake8-tidy-imports
    "Q", # flake8-quotes
    "FLY", # flynt
    "PERF", # perflint
    "RUF", # ruff-specific rules
    "PL",  # pylint
    "S",   # flake8-bandit
    "ANN", # flake8-annotations
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
    "S104",  # binding to all interfaces in example apps
    "PLR6301",  # test methods could be functions – acceptable in test classes
    "PLR1702",  # nested blocks – accepted for complex websocket handler
    "PLR0912",  # too many branches – accepted for handler endpoints
    "PLR0915",  # too many statements – accepted for handler endpoints
    "PLW0603",  # global statement usage in lifespan for singleton pattern
    "ANN401",   # allow use of Any in some interfaces & tests
    "RUF029",   # allow async def without await in mock helpers
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value used in comparison
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG", "FBT", "PLR2004", "S101", "TID252", "ANN001", "ANN201", "ANN202", "ANN003", "ANN101", "ANN102"]
"scripts/**/*" = ["S603", "S404", "ANN201", "PLR2004", "F841"]
"conftest.py" = ["ANN001"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# MyPy configuration (consolidated from mypy.ini)
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = true
strict_equality = true
extra_checks = true
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
show_column_numbers = true
color_output = true
error_summary = true
pretty = true
files = ["src/clarity", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*", 
    "google.*",
    "firebase_admin.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "sklearn.*",
    "pytest.*",
    "factory.*",
    "faker.*",
    "redis.*",
    "prometheus_client.*",
    "structlog.*",
    "scipy.*",
    "circuitbreaker.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
check_untyped_defs = false

# Pytest configuration (consolidated from pytest.ini)
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/clarity",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=25",
    "--cov-branch",
    "--maxfail=5",
    "--durations=10",
    "--asyncio-mode=auto",
    "-p", "no:warnings",
]
# Professional logging configuration for consistent caplog behavior
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "DEBUG"
log_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_auto_indent = true
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = [".git", ".tox", "dist", "build", "*.egg", "node_modules", ".venv", "venv"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning", 
    "ignore::UserWarning:google.*",
    "ignore::UserWarning:torch.*",
    "ignore::UserWarning:transformers.*",
    "ignore::pytest_asyncio.plugin::PytestDeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests", 
    "slow: Slow-running tests",
    "ml: Machine learning model tests",
    "auth: Authentication tests",
    "api: API endpoint tests",
    "db: Database tests",
    "gcp: Google Cloud Platform tests",
    "health: Health data processing tests",
    "pat: PAT model specific tests",
    "gemini: Gemini LLM tests",
    "explainability: Model explainability tests",
    "asyncio: marks tests as async (defers to plugin detection)",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/migrations/*",
    "*/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Bandit security linting
[tool.bandit]
exclude_dirs = ["tests", "migrations"]
# Skip these checks that have legitimate uses with noqa comments
skips = [
    "B101",  # assert_used - needed for type narrowing
    "B104",  # hardcoded_bind_all_interfaces - needed for model server
    "B105",  # hardcoded_password_string - dev-secret-key is clearly marked
    "B108",  # hardcoded_tmp_directory - /tmp/clarity_models is intentional
    "B310",  # urllib_urlopen - JWKS URL is validated
    "B311",  # random - used only for mock data generation
    "B601",  # paramiko_calls
]
